--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "~4.0.0",
     "fh-mbaas-api": "~4.9.0",
     "mocha": "^2.1.0",
+    "oracle": "0.3.8",
     "request": "~2.40.0"
   },
   "devDependencies": {
